--- a/test/blog.css
+++ b/test/blog.css
@@ -1,12 +1,13 @@
 body a{
+	font-family: "SimSun",Arial,Verdana;
 	text-decoration: none;
 }
 .header{
 	background: #202020;
 	float: left;
-	padding: 60px 58px 230px 56px;
-	width: 139px;
-	height: 700px;
+	padding: 60px 55px 235px 55px;
+	width: 140px;
+	height: 475px;
 	text-align: center;
 	color: #ffffff;
 }
@@ -17,37 +18,51 @@ body a{
 	list-style-image: url(images/主页.png);
 	line-height: 2.5;
 	font-size: 18px;
-	margin-top: 70px;
-	margin-bottom: 75px;
+	margin:70px 25px;
 }
 .header ul a{
 	color: #ffffff;
 }
+.header table{
+       width: 120px;
+       margin:0px 20px; 
+}
 .header table td{
       text-align: left;
-       width: 44px;
+       width: 40px; 
 }
 .article{
 	background: #ee82ee;
-	padding: 60px 100px 10px 405px;
+	padding: 60px 100px 0px 100px;
 	width: 915px;
-	height:920px; 
+	height:710px; 
+	margin-left: 250px;
+	font-size: 16px;
 }
-.advice ol li{
-	float: left;
-	margin-right: 15px; 
+h2{
+	font-size: 32px;
+}
+#advice{
+	padding: 10px 0px 10px 10px;
+	margin-top: 10px;
+	margin-bottom: 0px;
+	border-left: 2px solid;
+}
+#answers{
+	padding: 10px 0px 10px 10px;
+	border-left: 2px solid;
 }
 .date1{
 	position: absolute;
-	text-align: right;
-	top: 60px;
-	right: 30px;
+	text-align: center;
+	top: 80px;
+	right: 100px;
 	width: 90px;
 }
 .date2{
 	position: absolute;
-	text-align: right;
-	top: 380px;
-	right: 30px;
+	text-align: center;
+	top: 470px;
+	right: 100px;
 	width: 90px;
 }
